crates/rehearse/tests/ui/pipeline/fail/return_in_body.rs
use rehearse::{operation, pipeline};

#[derive(Clone)]
struct Services;

#[derive(Debug, Clone)]
struct Error;

#[operation(impact = pure)]
async fn seed() -> Result<u32, Error> {
    Ok(1)
}

#[pipeline]
fn bad() -> rehearse::Plan<Services, u32, Error> {
    return bad();
    let value = step!(seed())?;
    Ok(value)
}

fn main() {}
